# rgb_strip

./: .gitignore  .python-version  README.md  package.json  pyproject.toml  pytype.cfg  requirements.txt  test.py  test_big.yaml
RGBGifDisplay/: main.py  pyproject.toml  requirements.txt  rgb_gif_display.py  server.py
RGBImageDisplay/: devices.py  index.html  led_mapping.py  main.py  pyproject.toml  requirements.txt  rgb_clock.py  rgb_image_display.py  server.py  weather.py
RGBImageDisplay/scripts/: poetry_install.sh  poetry_run.sh  poetry_update.sh
RGBImageDisplay/static/: index.css  index.js
RGBImageDisplay/templates/: base.tpl  index.tpl
RGBImageRenderer/: colours.py  config.py  main.py  pyproject.toml  requirements.txt
RGBImageRenderer/effects/: base.py  fireworks.py  lines.py  scrolling_lines.py  sparkles.py  spiral.py  spirals.py  spread.py  text.py  utils.py  wandering_lines.py
RGBImageRenderer/scripts/: poetry_install.sh
RGBStrip/: README.md  __main__.py  config.py  config_loader.py  constants.py  controller.py  manager.py  render_file.py  section.py  server.py  utils.py
RGBStrip/controllers/: base.py  boards.py  cone.py  rectangular.py
RGBStrip/displays/: base.py  cursesd.py  rpi_manual.py  rpi_spi.py  rpi_spi_ws2812.py  tk.py  websocket.py
RGBStrip/renderers/: base.py  clock.py  cone_level.py  cone_spin.py  cone_spin_full.py  cone_spin_line.py  cone_spiral_drip.py  cone_spiral_fill.py  gravity.py  gravity_drip.py  gravity_shot.py  image.py  lines.py  multi_all.py  multi_sequential.py  multi_timed.py  patch.py  rainbow.py  sparkles.py  spiral.py
RGBStrip/sections/: cone.py  rectangular.py
RGBStrip/static/css/: main.css  main_ang.css
RGBStrip/static/html/: index.html  index_ang.html
RGBStrip/static/js/: ConfigController.js  DisplayController.js  app.js  index.js  index_ang.js
configs/: cone.yaml  rainbow.yaml  test.yaml
init.d/: rgbc.service  rgbid.service  rgbs  rgbs.service  rgbs_start.sh  rgbs_stop.sh
scripts/: poetry_add.sh  poetry_install.sh
scripts/weather/vectorstock/: extract.py
scripts/weather/weather-pixel-icons/: convert.py
src/: config.py  controller.py  section_controller.py  test.py
src/displays/: console.py  rpi_manual.py  rpi_spi.py
src/renderers/: rainbow.py
tree/: .gitignore  display.yaml  render.yaml  render_new.yaml
