[tool.poetry]
name = "RGBStrip"
version = "0.1.0"
description = "The RGB strip controller"
authors = [
  "Nicholas Lee <csudcy@gmail.com>"
]

readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.9,<3.10"  # Compatible python versions must be declared here
PyYAML = ">=5.4"
# To use the web server
bottle = ">=0.12.18"
gevent = ">=20.9.0"
gevent-websocket = ">=0.10.1"
click = ">=7.1.2"
Pillow = ">=8.0.1"

[tool.poetry.dev-dependencies]
isort = ">=5.6.4"
pytype = ">=2020.10.8"
yapf = ">=0.30.0"

[tool.isort]
profile = "google"

known_first_party = [
    "colours",
    "effects",
    "led_mapping",
]
